feat(payment): payment endpoints added
