# openapi.json
@@ -267,6 +267,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "paymentNumber": {
+                    "type": "string",
+                    "pattern": "^(97|98)\\d{8}$"
+                  },
                   "citizenshipNumber": {
                     "type": "string",
                     "minLength": 1
@@ -281,6 +285,7 @@
                   }
                 },
                 "required": [
+                  "paymentNumber",
                   "citizenshipNumber",
                   "documentUrl"
                 ]
@@ -320,6 +325,9 @@
                           "type": "null"
                         }
                       ]
+                    },
+                    "paymentNumber": {
+                      "type": "string"
                     }
                   },
                   "required": [
@@ -328,7 +336,8 @@
                     "status",
                     "citizenshipNumber",
                     "documentUrl",
-                    "selfieUrl"
+                    "selfieUrl",
+                    "paymentNumber"
                   ],
                   "additionalProperties": false
                 }
@@ -2502,6 +2511,282 @@
           {
             "in": "query",
             "name": "leaserId",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "applications": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "landId": {
+                            "type": "string"
+                          },
+                          "leaserId": {
+                            "type": "string"
+                          },
+                          "plans": {
+                            "type": "string"
+                          },
+                          "leaseDurationInMonths": {
+                            "type": "number"
+                          },
+                          "proposedMonthlyRent": {
+                            "type": "number"
+                          },
+                          "status": {
+                            "type": "string",
+                            "enum": [
+                              "PENDING",
+                              "ACCEPTED",
+                              "REJECTED",
+                              "COMPLETED"
+                            ]
+                          },
+                          "additionalMessages": {
+                            "anyOf": [
+                              {
+                                "type": "string"
+                              },
+                              {
+                                "type": "null"
+                              }
+                            ]
+                          },
+                          "createdAt": {
+                            "type": "string"
+                          },
+                          "land": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "string"
+                              },
+                              "ownerId": {
+                                "type": "string"
+                              },
+                              "title": {
+                                "type": "string"
+                              },
+                              "description": {
+                                "type": "string"
+                              },
+                              "location": {
+                                "type": "string"
+                              },
+                              "sizeInSqmeter": {
+                                "type": "number"
+                              },
+                              "pricePerMonth": {
+                                "type": "number"
+                              },
+                              "heroImageUrl": {
+                                "type": "string"
+                              },
+                              "galleryUrls": {
+                                "type": "array",
+                                "items": {
+                                  "type": "string"
+                                }
+                              },
+                              "lalpurjaUrl": {
+                                "anyOf": [
+                                  {
+                                    "type": "string"
+                                  },
+                                  {
+                                    "type": "null"
+                                  }
+                                ]
+                              },
+                              "status": {
+                                "type": "string",
+                                "enum": [
+                                  "AVAILABLE",
+                                  "UNVERIFIED",
+                                  "REJECTED",
+                                  "IN_NEGOTIATION",
+                                  "LEASED",
+                                  "HIDDEN"
+                                ]
+                              },
+                              "createdAt": {
+                                "type": "string"
+                              },
+                              "updatedAt": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "ownerId",
+                              "title",
+                              "description",
+                              "location",
+                              "sizeInSqmeter",
+                              "pricePerMonth",
+                              "heroImageUrl",
+                              "galleryUrls",
+                              "lalpurjaUrl",
+                              "status",
+                              "createdAt",
+                              "updatedAt"
+                            ],
+                            "additionalProperties": false
+                          },
+                          "leaser": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "string"
+                              },
+                              "name": {
+                                "anyOf": [
+                                  {
+                                    "type": "string"
+                                  },
+                                  {
+                                    "type": "null"
+                                  }
+                                ]
+                              },
+                              "role": {
+                                "type": "string",
+                                "enum": [
+                                  "LEASER",
+                                  "OWNER",
+                                  "ADMIN"
+                                ]
+                              },
+                              "isKycVerified": {
+                                "type": "boolean"
+                              },
+                              "createdAt": {
+                                "type": "string"
+                              },
+                              "updatedAt": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "name",
+                              "role",
+                              "isKycVerified",
+                              "createdAt",
+                              "updatedAt"
+                            ],
+                            "additionalProperties": false
+                          }
+                        },
+                        "required": [
+                          "id",
+                          "landId",
+                          "leaserId",
+                          "plans",
+                          "leaseDurationInMonths",
+                          "proposedMonthlyRent",
+                          "status",
+                          "additionalMessages",
+                          "createdAt",
+                          "land",
+                          "leaser"
+                        ],
+                        "additionalProperties": false
+                      }
+                    },
+                    "total": {
+                      "type": "number"
+                    }
+                  },
+                  "required": [
+                    "applications",
+                    "total"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error.BAD_REQUEST"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Authorization not provided",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error.UNAUTHORIZED"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Insufficient access",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error.FORBIDDEN"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error.NOT_FOUND"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error.INTERNAL_SERVER_ERROR"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/lease/my-accepted-applications": {
+      "get": {
+        "operationId": "lease-GetMyAcceptedApplications",
+        "description": "Get all accepted applications for the logged-in leaser",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "landId",
             "schema": {
               "type": "string"
             }
