# src/server/models/lease.models.ts
@@ -100,3 +100,11 @@ export const getAllApplicationsInputSchema = z.object({
   landId: z.string().optional(),
   leaserId: z.string().optional(),
 });
+export const getMyAcceptedApplicationsInputSchema = z.object({
+  landId: z.string().optional(),
+});
+
+export const getMyAcceptedApplicationsResponseSchema = z.object({
+  applications: z.array(getApplicationByIdResponseSchema),
+  total: z.number(),
+});
